# Back-end-Postmates

./: .gitignore  Dockerfile  LICENSE  Losangeles_url_list.csv  README.md  deploy-docker.py  deploy.py  dump.sql  postmate_web_crawler.py  pyproject.toml  requirements.txt  sanfansisco_url_list2.csv
.config/: gunicorn.py  postmates.nginx  supervisord.conf
.config/local_dev/: gunicorn.py  postmates.nginx  supervisord.conf
app/: Untitled.ipynb  crawler_smaple20200629.ipynb  dev_notebook.ipynb  postmate_web_cralwer_detail.ipynb  requirements.txt  크롤링 정리 샘플 20200629.ipynb
app/config/: settings.py  urls.py
app/config/settings/: __init__.py  base.py  dev.py  production.py
app/deliveries/: admin.py  models.py  serializers.py  urls.py  views.py
app/deliveries/migrations/: 0001_initial.py  0002_delivery_user.py  0003_orderedmenu_quantity.py  0004_orderedmenu_total_price.py
app/members/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200629_2318.py  0002_auto_20200712_1219.py
app/stores/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
app/stores/fixtures/: test.json
app/stores/migrations/: 0001_initial.py  0002_auto_20200629_2318.py  0002_auto_20200711_0202.py  0002_store_latlng.py  0003_auto_20200629_2321.py  0004_auto_20200629_2335.py  0005_auto_20200629_2338.py
config/: settings.py
crawling/: insert_data.ipynb  store_detail.py  store_page_dumps.py  stores_url.py
crawling/functions/: store_detail.py  utils.py
